[Feat] [JournalView] 새 디자인 적용

--- a/FallWin/Info.plist
+++ b/FallWin/Info.plist
@@ -13,6 +13,9 @@
 		<string>Pretendard-Regular.ttf</string>
 		<string>Pretendard-SemiBold.ttf</string>
 		<string>Pretendard-Thin.ttf</string>
+		<string>SejongGeulggot.ttf</string>
+		<string>UhBee Se_hyun.ttf</string>
+		<string>UhBee Se_hyun Bold.ttf</string>
 	</array>
 </dict>
 </plist>
